--- a/test2/Dockerfile
+++ b/test2/Dockerfile
@@ -3,3 +3,4 @@ MAINTAINER Wang Zhi Fang <ispoet@163.com>
 RUN yum install -y lsof
 RUN yum install -y vim
 RUN yum install -y wget
+RUN yum install -y curl
